--- a/betta-0.0.4.scss
+++ b/betta-0.0.4.scss
@@ -26,7 +26,7 @@ TEMP is used to denote values that need to be changed
 ---------------------------------------*/
 
 /* The ten levels of black saturation */
-$color-base-0: #ffffff;
+$color-base-0: #fafafa;
 $color-base-1: #f5f5f5;
 $color-base-2: #eeeeee;
 $color-base-3: #e0e0e0;
@@ -81,6 +81,7 @@ $transition-slow: 0.3s;
 body {
   margin: 0;
   font-size: 16px;
+  background: $color-base-0;
 }
 
 body.dark {
